#76 Fixed alignment of header title next to PARI logo in Safari

--- a/core/static/css/v2/main.less
+++ b/core/static/css/v2/main.less
@@ -47,9 +47,7 @@
 }
 
 #mainnav .navbar-header {
-  .header-title-wrapper {
-    display: inline-block;
-  }
+  width: 100%;
 }
 
 .single-category, .author-detail, .archive-detail, .article-detail {
